* [bug 1139] Fixed download delay in some cases (thanks mikael eman)
* [bug 1144] Added possibility to add many hub lists in one go (use ; as separator) (thanks poy)
* [bug 1152] Only refresh if there are directories shared (thanks ullner)
* [bug 1153] More shell menus (thanks poy)
* [bug 1159] Removed unnecessary resume position reset (thanks cologic)

-- 0.699 2006-12-18 --
* Switched to VC8/VS2005
* Removed some unused options
* Antifrag is now default
* Confirm hub removal is now default
* SFV checking is now default
* Fixed TLS port not being greyed out
* Automatic hub reconnection is only done if at least one successful connection has been made
* [bug 1080] Better nick tab completion (thanks cologic)
* [bug 1081] Added user IP in hub frame (thanks cologic)
* No more STLport for the time being
* Linux checks for invalid file types (thanks steven sheehy)
* Fixed potential crash when search began with space
* [bug 1085] Better sound playing settings (thanks cologic / ullner)
* [bug 1111] OpenSSL compatibility and some unix fixes (thanks steven sheehy)
* [bug 1056] Added option to sort fav users above other users in hub frame (thanks poy)
* [bug 1063] Added option to show shell context menu in finished frame (thanks poy)
* [bug 1092] Fixed TTH tree being redownloaded (thanks stephan hohe)
* [bug 1097] Fixed waiting users being removed (thanks stephan hohe)
* [bug 1110] Added new adc hub list (thanks mafa_45)
* [bug 1091] Added new nmdc hub lists (thanks poy)
* [bug 1112] Port sign cleanup (thanks steven sheehy)
* [ADC] Fixed client-to-client connection sequence
* [bug 1064] Updated to YaSSL 1.5.0, should fix crash
* [bug 446] Public hub lists are cached and downloaded only when user requests it (thanks poy)
* [bug 1117] Fixed subfolders being created on filelist downloads (thanks mikael eman)
* [bug 1096] Updated credits in about box
* [bug 1123] Removed some typecasts (thanks stephan hohe)
* [bug 1099] Fixed "Readd all" spin
* [bug 1095] Fixed about dialog
