@@ -49,15 +49,14 @@ public:
 	enum {
 		FLAG_USER_LIST = 0x01,
 		FLAG_RESUME = 0x02,
-		FLAG_ROLLBACK = 0x04,
-		FLAG_ZDOWNLOAD = 0x08,
-		FLAG_CALC_CRC32 = 0x10,
-		FLAG_CRC32_OK = 0x20,
-		FLAG_ANTI_FRAG = 0x40,
-		FLAG_TREE_DOWNLOAD = 0x100,
-		FLAG_TREE_TRIED = 0x200,
-		FLAG_PARTIAL_LIST = 0x400,
-		FLAG_TTH_CHECK = 0x800
+		FLAG_ZDOWNLOAD = 0x04,
+		FLAG_CALC_CRC32 = 0x08,
+		FLAG_CRC32_OK = 0x10,
+		FLAG_ANTI_FRAG = 0x20,
+		FLAG_TREE_DOWNLOAD = 0x40,
+		FLAG_TREE_TRIED = 0x100,
+		FLAG_PARTIAL_LIST = 0x200,
+		FLAG_TTH_CHECK = 0x400
 	};
 
 	Download(UserConnection& conn) throw();
@@ -199,7 +198,6 @@ private:
 	Download::List downloads;
 	UserConnection::List idlers;
 
-	bool checkRollback(Download* aDownload, const uint8_t* aBuf, int aLen) throw(FileException);
 	void removeConnection(UserConnection::Ptr aConn);
 	void removeDownload(Download* aDown);
 	void fileNotAvailable(UserConnection* aSource);
