@@ -88,16 +88,15 @@ public:
 		enum {
 			FLAG_NONE = 0x00,
 			FLAG_FILE_NOT_AVAILABLE = 0x01,
-			FLAG_ROLLBACK_INCONSISTENCY = 0x02,
-			FLAG_PASSIVE = 0x04,
-			FLAG_REMOVED = 0x08,
-			FLAG_CRC_FAILED = 0x10,
-			FLAG_CRC_WARN = 0x20,
-			FLAG_NO_TTHF = 0x40,
-			FLAG_BAD_TREE = 0x80,
-			FLAG_NO_TREE = 0x100,
-			FLAG_SLOW_SOURCE = 0x200,
-			FLAG_MASK = FLAG_FILE_NOT_AVAILABLE | FLAG_ROLLBACK_INCONSISTENCY
+			FLAG_PASSIVE = 0x02,
+			FLAG_REMOVED = 0x04,
+			FLAG_CRC_FAILED = 0x08,
+			FLAG_CRC_WARN = 0x10,
+			FLAG_NO_TTHF = 0x20,
+			FLAG_BAD_TREE = 0x40,
+			FLAG_NO_TREE = 0x80,
+			FLAG_SLOW_SOURCE = 0x100,
+			FLAG_MASK = FLAG_FILE_NOT_AVAILABLE
 				| FLAG_PASSIVE | FLAG_REMOVED | FLAG_CRC_FAILED | FLAG_CRC_WARN 
 				| FLAG_BAD_TREE | FLAG_NO_TREE | FLAG_SLOW_SOURCE
 		};
