@@ -357,7 +357,6 @@ enum Strings { // @DontAdd
 	REMOVE_FROM_ALL, // "Remove user from queue"
 	REMOVE_SOURCE, // "Remove source"
 	RENAMED_TO, // " renamed to "
-	ROLLBACK_INCONSISTENCY, // "Rollback inconsistency, existing file does not match the one being downloaded"
 	RUNNING, // "Running..."
 	S, // "s"
 	SEARCH, // "Search"
@@ -382,7 +381,6 @@ enum Strings { // @DontAdd
 	SETTINGS_ADLS_BREAK_ON_FIRST, // "Break on first ADLSearch match"
 	SETTINGS_ADVANCED, // "Advanced"
 	SETTINGS_ADVANCED3, // "Advanced\\Experts only"
-	SETTINGS_ADVANCED_RESUME, // "Advanced resume using TTH"
 	SETTINGS_ADVANCED_SETTINGS, // "Advanced settings"
 	SETTINGS_ALLOW_UNTRUSTED_CLIENTS, // "Allow TLS connections to clients without trusted certificate"
 	SETTINGS_ALLOW_UNTRUSTED_HUBS, // "Allow TLS connections to hubs without trusted certificate"
@@ -495,7 +493,6 @@ enum Strings { // @DontAdd
 	SETTINGS_QUEUE, // "Downloads\\Queue"
 	SETTINGS_RENAME_FOLDER, // "Rename"
 	SETTINGS_REQUIRES_RESTART, // "Note; most of these options require that you restart DC++"
-	SETTINGS_ROLLBACK, // "Rollback"
 	SETTINGS_SEARCH_HISTORY, // "Search history"
 	SETTINGS_SELECT_TEXT_FACE, // "Select &text style"
 	SETTINGS_SELECT_WINDOW_COLOR, // "Select &window color"
